# OutcomeTrackerAPI

./: .gitignore  Dockerfile  Gemfile  Procfile.dev  README.md  docker-compose.prod.yml  structure.txt
.claude/: settings.local.json
.devcontainer/: Dockerfile
.github/workflows/: ci.yml  database-dump.yml
agent/: .env.example  CLAUDE.md  pyproject.toml  run_batch.sh
agent/.claude/: settings.json
agent/.claude/hooks/: on_stop_commitment.sh  on_stop_entry.sh
agent/src/agent/: db.py  evaluator.py  main.py  prompts.py
agent/src/agent/domain/: validators.py
agent/src/agent/tools/: db_read.py  rails_write.py  web_search.py
app/controllers/: bills_controller.rb  commitments_controller.rb  departments_controller.rb  feed_items_controller.rb  mcp_controller.rb  policy_areas_controller.rb
app/jobs/: agent_evaluate_commitment_job.rb  agent_process_entry_job.rb  agent_weekly_scan_job.rb  commitment_assessment_cron_job.rb  commitment_assessment_job.rb  commitment_dedup_job.rb  commitment_relevance_filter_job.rb  commitment_status_derivation_job.rb  criteria_generation_cron_job.rb  criteria_generator_job.rb  (+6 more)
config/: credentials.yml.enc  database.yml  routes.rb  storage.yml
db/: schema.rb  seeds.rb
docs/: commitment-generation.md  commitment_evaluation_plan.md  commitments.md  evaluation-system.md  frontend-api.md
lib/: env_or_credentials.rb
plans/: 01-commitment-extraction.md  02-evaluation-criteria-generation.md  03-supersession-detection.md  04-assessment-pipeline.md  05-backfill.md  06-new-data-sources.md  07-frontend-backend-requirements.md
(+163 files in other folders)
